# IrulerDesk2.0

./: .gitignore  CMakeLists.txt  VERSION_UPDATE.md  build_log.txt  simple_tile_test.cpp  test_tile_rendering.cpp  version.json  项目目录.txt
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
.trae/documents/: Fix Drawing Functionality and Add Debug Logging.md  在线更新功能实现方案.md
.trae/rules/: yuanze.md
api/: CaptureProcess_API.md  PlayerProcess_API.md  README.md  运行方式.md
api/日志/: 日志.txt
build_main/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CaptureProcess.vcxproj  CaptureProcess.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PlayerProcess.vcxproj  PlayerProcess.vcxproj.filters  ScreenStreamApp.sln  ScreenStreamApp.vcxproj  ScreenStreamApp.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ZipRelease.vcxproj  ZipRelease.vcxproj.filters  cmake_install.cmake
build_main/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_main/PlayerProcess_autogen/: mocs_compilation_Debug.cpp
build_main/ScreenStreamApp_autogen/: mocs_compilation_Debug.cpp
build_newui/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  NewUiTest.sln  NewUiTest.vcxproj  NewUiTest.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_newui/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_newui/NewUiTest_autogen/: mocs_compilation_Debug.cpp
build_trae/: ALL_BUILD.vcxproj  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CaptureProcess.vcxproj  CaptureProcess.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PlayerProcess.vcxproj  PlayerProcess.vcxproj.filters  ScreenStreamApp.sln  ScreenStreamApp.vcxproj  ScreenStreamApp.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ZipRelease.vcxproj  ZipRelease.vcxproj.filters  app_icon.rc  cmake_install.cmake
build_trae/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_trae/CaptureProcess_autogen/: mocs_compilation_Debug.cpp
build_trae/PlayerProcess_autogen/: mocs_compilation_Debug.cpp
download/: version.json
installer/: LICENSE.txt  LICENSE_en.txt  LICENSE_zh.rtf
server腾讯云服不要尝试本地构建这是上传给云的/: CMakeLists.txt  CMakeLists_routing.txt  DEPLOYMENT_GUIDE.md  README.md  README_login_system.md  README_routing.md  build.bat  build.sh  build_routing.sh  deploy_login_system.md  install-service.sh  server_deployment_guide.md  uninstall-service.sh  update-service.sh  websocket-server.service  websocket_server.pro  websocket_server_standalone.cpp  websocket_server_with_routing.cpp  安装方法.md
src/: MainWindow.cpp  MainWindow.h  UpdateLog.html  VideoWindow.cpp  VideoWindow.h  main.cpp
src/NewUi/: CMakeLists.txt  LoginClient.cpp  LoginClient.h  NewUiWindow.cpp  NewUiWindow.h  StreamClient.cpp  StreamClient.h  main.cpp
src/capture/: AnnotationOverlay.cpp  AnnotationOverlay.h  CursorOverlay.cpp  CursorOverlay.h  LogManager.cpp  LogManager.h  MouseCapture.cpp  MouseCapture.h  PerformanceMonitor.cpp  PerformanceMonitor.h  ScreenCapture.cpp  ScreenCapture.h  TileManager.cpp  TileManager.h  VP9Encoder.cpp  VP9Encoder.h  WebSocketClient.cpp  WebSocketClient.h  WebSocketSender.cpp  WebSocketSender.h  main_capture.cpp
src/common/: AppConfig.h  AutoUpdater.cpp  AutoUpdater.h  ConsoleLogger.cpp  ConsoleLogger.h  CrashGuard.cpp  CrashGuard.h
src/player/: DxvaVP9Decoder.cpp  DxvaVP9Decoder.h  VP9Decoder.cpp  (+6 more)
test_tile_cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  TileTest.sln  TileTest.vcxproj  TileTest.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
test_tile_cmake/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
test_tile_cmake/TileTest.dir/Release/TileTest.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  TileTest.lastbuildstate
test_tile_cmake/TileTest_autogen/: mocs_compilation_Release.cpp
test_tile_cmake/TileTest_autogen/include_Release/5ULSOSRVA2/: moc_VideoRenderer.cpp  moc_VideoRenderer.cpp.d
test_tile_cmake/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
test_tile_cmake/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
tests/: CMakeLists.txt  README.md  routing_websocket_server.py  simple_websocket_server.py  test_integration_websocket_renderer.cpp  test_tile_manager.cpp  test_tile_system.cpp  test_websocket_receiver_tiles.cpp  test_websocket_tiles.cpp  test_websocket_tiles_CMakeLists.txt
tests/NewUi/: CMakeLists.txt  NewUiWindow.cpp  NewUiWindow.h  main.cpp
修复日志/: 1212问题汇总.md  vp9编解码优化网略传输速度优化.md  修复颜色反相.md  双工音频.md  建议功能.md  彻底修复局域网视频传输.md  消费者听不到生产者排除法.md  清理日志世界难题.md  瓦片分步todo.md  瓦片渲染集成测试完成.md  第二次进入没有画面的bug修复排除法.md  视频传输速度优化完成.md  通话质量排除法.md  音频逐步过程.md
参考/: 音频设备切换参考.txt
实时日志/: 客户端实时日志.md  服务器实时日志.md  生产端实时日志.md  观看端实时日志.md
(+211 files in other folders)
